--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 h1 {
   text-decoration: underline;
 }
@@ -30,4 +34,26 @@ svg {
   stroke: #333;
   stroke-width: 1.5px;
   fill: none;
+}
+
+.clickable-node {
+  margin: 5px;
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 5px 10px;
+  display: inline-block;
+}
+
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+.cf {
+    *zoom: 1;
 }
